--- a/relatorio.html
+++ b/relatorio.html
@@ -31,6 +31,7 @@
     <button onclick="filtrarVendas()">Filtrar</button>
   </div>
   <br>
+  <div id="rankingVendas"></div>
   <div id="calendario"></div>
   <br>
   <table border="1" id="tabelaVendas">
