--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <option>Fabio Felipe</option>
       <option>Elder</option>
       <option>Luan</option>
+      <option>Allysson</option>
     </select>
     <br><br>
     <label for="produto">Produto:</label>
@@ -29,6 +30,9 @@
       <option value="LTV 1 = Atualizaçao Cadastral Ticket 47">LTV 1 = Atualizaçao Cadastral Ticket 47</option>
       <option value="LTV 2 = Blindagem Ticket 53">LTV 2 = Blindagem Ticket 53</option>
     </select>
+    <br><br>
+    <label for="quantidade">Quantidade de Vendas:</label>
+    <input type="number" id="quantidade" name="quantidade" min="1" max="15" value="1" required>
     <br><br>
     <label for="valor">Valor (R$):</label>
     <input type="number" id="valor" name="valor" required readonly>
