--- a/relatorio.html
+++ b/relatorio.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Relatório de Vendas (últimos 30 dias)</h1>
+  <h1>Relatório de Vendas (Ano Atual)</h1>
   <div>
     <label for="colaboradorFiltro">Filtrar por colaborador:</label>
     <select id="colaboradorFiltro">
@@ -35,8 +35,8 @@
   </div>
   <br>
   <div style="display: flex; gap: 32px; justify-content: center; flex-wrap: wrap;">
-    <div id="rankingMensal97" style="min-width: 250px;"></div>
-    <div id="rankingMensalOutros" style="min-width: 250px;"></div>
+    <div id="rankingAnual97" style="min-width: 250px;"></div>
+    <div id="rankingAnualOutros" style="min-width: 250px;"></div>
   </div>
   <div style="display: flex; gap: 32px; justify-content: center; flex-wrap: wrap; margin-top: 16px;">
     <div id="rankingDiario97" style="min-width: 250px;"></div>
