--- a/relatorio.html
+++ b/relatorio.html
@@ -9,6 +9,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+  <!-- Toggle Modo Escuro -->
+  <button class="theme-toggle" id="themeToggle" title="Alternar modo escuro">
+    <i class="fas fa-moon"></i>
+  </button>
+
   <div class="container">
     <h1>
       <i class="fas fa-chart-bar"></i>
